# LatestVersionManager

./: .gitignore  LICENSE  README.md  app.py  lvm.spec  main.py  pyproject.toml  requirements.txt  start_lvm.bat  start_lvm.command  start_lvm.sh
.github/workflows/: build.yml
app/: __init__.py  _common.py  main_window.py  widgets.py  workers.py
app/dialogs/: __init__.py  about.py  batch_promote.py  discovery.py  dry_run.py  history_timeline.py  latest_path.py  manage_groups.py  naming_rule.py  obsolete_layer.py  project_setup.py  settings.py  source.py  update.py
companions/premiere/: lvm_restore_versions.jsx
companions/premiere/lvm_panel/: host.jsx  index.html  main.js
companions/premiere/lvm_panel/CSXS/: manifest.xml
companions/premiere/lvm_panel/lib/: CSInterface.js
companions/resolve/: lvm_restore_versions.py
docs/: companions.md
resources/: entitlements.plist  mp_logo.icns
src/lvm/: __init__.py  config.py  conflicts.py  discovery.py  elevation.py  fast_copy.py  history.py  hooks.py  log_handler.py  models.py  nle_bridge.py  promoter.py  scan_cache.py  scanner.py  task_tokens.py  templates.py  thumbnail.py  timecode.py  updater.py  watcher.py
tests/: test_blacklist_filter.py  test_core.py  test_date_versions.py  test_discovery_dialog.py  test_fast_copy.py  test_history_timeline.py  test_kia_source.py  test_nle_bridge.py  test_tag_input.py  test_timecode.py  test_untested_modules.py
tools/: generate_icons.py
